--- a/HW4 "Робота з макетами"/style.css
+++ b/HW4 "Робота з макетами"/style.css
@@ -1,4 +1,5 @@
-html, body {
+html,
+body {
   font-family: Lato;
   font-size: 14px;
   color: white;
@@ -10,67 +11,83 @@ html, body {
   max-width: 1440px;
   margin: auto;
 }
+
 .header {
   margin-bottom: 27px;
   display: flex;
   justify-content: space-around;
   align-items: center;
 }
+
 .logo {
- margin-top: 55px;
- display: flex;
- align-items: center;
+  margin-top: 55px;
+  display: flex;
+  align-items: center;
 }
+
 .logo-img {
   margin-right: 7px;
 }
-.logo-txt{
-font-weight: bold;
-font-size: 18px;
-line-height: 22px;
+
+.logo-txt {
+  font-weight: bold;
+  font-size: 18px;
+  line-height: 22px;
 }
+
 .navigation {
   margin-top: 58px;
 }
+
 .menu {
-  list-style: none;  
+  list-style: none;
 }
+
 li {
   display: inline;
   padding: 0 23px 0 0;
 }
-a{
+
+a {
   text-decoration: none;
   line-height: 17px;
   color: white;
 }
+
 .bold-a {
   font-weight: bold;
 }
+
 a:hover {
-  text-decoration: underline; 
+  text-decoration: underline;
 }
+
 .lang {
   display: flex;
   align-items: center;
 }
+
 .flag-img {
   margin-top: 54px;
   margin-right: 11px;
 }
+
 .lang-txt {
-line-height: 17px;
-margin-top: 60px;
-margin-right: 13px;
+  line-height: 17px;
+  margin-top: 60px;
+  margin-right: 13px;
 }
+
 .arrow-img {
   margin-top: 62px;
 }
+
 .onlylang {
   margin-right: 20px;
   display: flex;
   align-items: center;
 }
+
 .login {
   margin-top: 60px;
   text-align: center;
@@ -85,11 +102,13 @@ margin-right: 13px;
   align-items: center;
   font-size: 14px;
 }
+
 .login:hover {
   background-color: rgba(255, 255, 255, 0.7);
-  color:  #ED4C5C;
+  color: #ED4C5C;
   border: 1px solid transparent;
 }
+
 .mainwrapp {
   margin-top: 150px;
   display: flex;
@@ -97,26 +116,29 @@ margin-right: 13px;
   align-items: center;
   justify-content: center;
 }
+
 h1 {
-font-weight: bold;
-font-size: 72px;
-line-height: 86px;
-letter-spacing: 0.05em;
-margin-bottom: 38px;
+  font-weight: bold;
+  font-size: 72px;
+  line-height: 86px;
+  letter-spacing: 0.05em;
+  margin-bottom: 38px;
 }
+
 p {
-font-weight: 500;
-font-size: 24px;
-line-height: 36px;
-max-width: 540px;
-letter-spacing: 1px;
-text-align: center;
-margin-bottom: 39px;
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 36px;
+  max-width: 540px;
+  letter-spacing: 1px;
+  text-align: center;
+  margin-bottom: 39px;
 }
+
 .sign-up {
-font-weight: 500;
-font-size: 14px;
-line-height: 17px;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 17px;
   color: #ED4C5C;
   text-align: center;
   padding: 17px 52px 16px 53px;
@@ -126,9 +148,10 @@ line-height: 17px;
   letter-spacing: 0.7px;
   margin-bottom: 180px;
 }
+
 .sign-up:hover {
-font-weight: bold;
-color: #FFFFFF;
-border: 1px solid  white;
-background-color: rgba(237, 76, 92, 0.2);
+  font-weight: bold;
+  color: #FFFFFF;
+  border: 1px solid white;
+  background-color: rgba(237, 76, 92, 0.2);
 }
