--- a/HW5 "Блочна верстка"/style.css
+++ b/HW5 "Блочна верстка"/style.css
@@ -9,7 +9,7 @@ body {
 }
 
 .add-download-section {
-  background-image: url(./images/bg.png);
+  background-image: url(./images/background.png);
   background-repeat: no-repeat;
   background-size: cover;
   display: flex;
