--- a/HW5 "Блочна верстка"/style.css
+++ b/HW5 "Блочна верстка"/style.css
@@ -83,7 +83,7 @@ p {
 
 .contact-us {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   height: 500px;
   padding-top: 117px;
 }
@@ -168,7 +168,7 @@ select {
 
 .all-info {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
 }
 
 h5 {
