--- a/HW6 "Flex, Grid"/style.css
+++ b/HW6 "Flex, Grid"/style.css
@@ -55,6 +55,10 @@ color: #4B5D68;
   font-weight: 800;
 }
 
+.header-menu-link a:hover {
+  text-shadow: 0px 5px 5px rgba(156, 105, 226, 0.7);
+}
+
 .header-request {
   margin-left: auto;
   font-family: Avenir;
@@ -72,8 +76,62 @@ color: #4B5D68;
   display: flex;
   justify-content: space-between;
   align-items: center;
+  cursor: pointer;
 }
 
 .header-request span {
   margin-right: 20px;
+}
+
+.header-request:hover {
+  box-shadow: 0px 5px 5px rgba(156, 105, 226, 0.5);
+}
+
+.header-content {
+  margin-top: 130px;
+  width: 60%;
+}
+
+h1 {
+font-weight: bold;
+font-size: 80px;
+line-height: 110%;
+color: #212353;
+}
+
+.header-txt {
+font-family: Avenir;
+font-style: normal;
+font-weight: 500;
+font-size: 18px;
+line-height: 160%;
+color: #4B5D68;
+margin-top: 50px;
+width: 65%;
+}
+
+.header-more {
+  margin-top: 50px;
+  background: #9C69E2;
+  border-radius: 50px;
+  font-family: Avenir;
+  font-style: normal;
+  font-weight: 800;
+  font-size: 18px;
+  line-height: 160%;
+  padding: 16px 37px;
+  border: 1px solid transparent;
+  color: #FFFFFF;
+}
+
+.header-more:hover {
+  border: 1px solid #9C69E2;
+  background: white;
+  color: #9C69E2;
+}
+
+header {
+  background-image: url(./images/header-pic.png);
+  background-repeat: no-repeat;
+  background-position: top 150% left 360%;
 }
