--- a/HW7/style.css
+++ b/HW7/style.css
@@ -289,12 +289,14 @@ header {
 
 .search-profile>a {
   margin-left: 7.5%;
+  cursor: pointer;
 }
 
 .profile-icon {
   display: flex;
   align-items: center;
   margin-left: 4.5%;
+  cursor: pointer;
 }
 
 .profile-down-arrow {
@@ -313,6 +315,7 @@ header {
   align-items: center;
   background: #F5F5F7;
   border-radius: 14px;
+  cursor: pointer;
 }
 
 .number {
@@ -370,6 +373,7 @@ header {
   background-image: url(./images/down-arrow.svg);
   background-repeat: no-repeat;
   background-position: 72px center;
+  cursor: pointer;
 }
 
 .chart {
