--- a/HW10 "Bootstrap"/style.css
+++ b/HW10 "Bootstrap"/style.css
@@ -190,6 +190,18 @@ header {
   margin-bottom: 25px;
 }
 
+@media (max-width: 605px) {
+  .header-nav {
+    flex-direction: column;
+    justify-content: center;
+  }
+
+  .header-nav>a,
+  .search-form {
+    margin-bottom: 8px;
+  }
+}
+
 @media (max-width:580px) {
   .main {
     margin-top: 10px;
@@ -223,11 +235,6 @@ header {
   .main-txt>a {
     font-size: 12px;
   }
+
 }
 
-@media (max-width: 376px) {
-  .header-nav {
-    flex-direction: column;
-    justify-content: center;
-  }
-}
