--- a/HW12/style.scss
+++ b/HW12/style.scss
@@ -438,6 +438,14 @@ footer {
     }
   }
 
+  .headertxt {
+    .headerbtns{
+      button {
+        font-size: 12px;
+      }
+    }
+  }
+
   .bigblock {
     flex-direction: column;
 
@@ -528,14 +536,17 @@ footer {
       margin-right: 5%;
 
       .footernav {
-        max-width: 200px;
+        max-width: 150px;
         margin: 0;
         padding-bottom: 15px;
         border-bottom: 1px solid #939EA4;
+        a {
+          font-size: 12px;
+        }
       }
 
       .social-media {
-        max-width: 200px;
+        max-width: 150px;
         margin: 15px 0;
       }
     }
